--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio Work</title>
 </head>
 <body>
-    <section class="top">
+    <div class="top">
         <header class="header">Portolio</header>
             <p class="headera">
             Other Links
@@ -17,22 +17,22 @@
             <a href="./resume.html" class="resumei">Resume</a>
             <a href="./preproduction.html" class="prei">Pre-Production Write Up</a>
         </div>
-    </section>
+    </div>
     <section id="blog">
         <h1 class = "title">MoMart</h1>
-    <section class = "flexed">
-        <article class="format-f">
+    <div class = "flexed">
+        <div class="format-f">
             <div class="image-a">
                 <img src="MoMartImage1.png" alt="MoMart Character cleaning up a mess">
             </div>
-        </article>
-        <article class="format-f">
+        </div>
+        <div class="format-f">
             <div class="image-b">
                 <img src="MoMartImage2.png" alt="Momart Character talking to a customer">
             </div>
-        </article>
-    </section>
-        <article class ="description">
+        </div>
+    </div>
+        <div class ="description">
             <p class ="contact">
                 This was the first game that I developed as part of the MI 445 Game Design Minor class, where you play as an
                 average day retail worker employed at MoMart who is secretly a monster just trying to get by. For this game I 
@@ -44,22 +44,22 @@
                 monotoneus were NPC customers, each with their own minigame they let you play. Everyone helped with the process of making
                 sure they felt fun and enjoyable which resulted in good breaks between the different tasks.
             </p>
-        </article>
+        </div>
         <a href="https://connor-miller.itch.io/momart-inc">Check out MoMart Inc.!</a>
         <h2 class="title">Pizzakei</h2>
-    <section class = "flexed">
-        <article class="format-f">
+    <div class = "flexed">
+        <div class="format-f">
             <div class="image-a">
                 <img src="PizzakeiImage1.png" alt="Image of beginning of the 1st level">
             </div>
-        </article>
-        <article class="format-f">
+        </div>
+        <div class="format-f">
             <div class="image-b">
                 <img src="PizzakeiImage2.png" alt="Image of another section of the 1st level">
             </div>
-        </article>
-    </section>
-        <article class ="description">
+        </div>
+    </div>
+        <div class ="description">
             <p class ="contact">
                 This is the second game that I am currently developing for my MI 445 class. In Pizzakei, the player plays as a man 
                 who has recently passed away but has been reincarnated as a sentient pizza mobster sent on a quest to take down the 
@@ -69,14 +69,14 @@
                 was going to be moving between the different areas often. I also wanted to make sure that the combat was fun which is why
                 I was very careful in how I placed the enemies.
             </p>
-        </article>
+        </div>
         <a href="https://connor-miller.itch.io/">Check out my other games!</a>
     </section>
-    <section class="bottom">
+    <div class="bottom">
         <header class="headera">Contact Me</header>
             <p class="headerb">
             connorcem415@gmail.com
             </p>
-    </section>
+        </div>
 </body>
 </html>
