--- a/preproduction.html
+++ b/preproduction.html
@@ -8,7 +8,7 @@
     <title>pre-production</title>
 </head>
 <body>
-    <section class="top">
+    <div class="top">
         <header class="headere">Pre-Production Write Up</header>
             <p class="headerg">
             Other Links
@@ -17,15 +17,15 @@
             <a href="./resume.html" class="resumep">Resume</a>
             <a href="./index.html">Portfolio</a>
         </div>
-    </section>
+    </div>
 <section id="blog">
     <h1 class = "title-h">The Original Pitchboard</h1>
-    <article class="format-g">
+    <div class="format-g">
         <div class="image-d">
             <img src="Pitchboard1.png" alt="First Pitchboard draft">
         </div>
-    </article>
-    <article class ="description-f">
+    </div>
+    <div class ="description-f">
         <p class ="contact-e">
             In the original pitchboard of Wapipely, it was intended to be a site where people who were 
             looking for a job could submit their portfolios onto the site, after which the employers who 
@@ -35,14 +35,14 @@
             the original concept, such as not letting the users upload their resumes and not being very 
             well formatted.
         </p>
-    </article>
+    </div>
     <h2 class = "title-h">The New Pitchboard</h2>
-    <article class="format-g">
+    <div class="format-g">
         <div class="image-c">
             <img src="Pitchboard2.png" alt="Second Pitchboard draft">
         </div>
-    </article>
-    <article class ="description-f">
+    </div>
+    <div class ="description-f">
         <p class ="contact-e">
             In the New Pitchboard several things were changed from the original. The biggest change is 
             that users are now also able to upload their resume as well as their portfolio in order to 
@@ -52,14 +52,14 @@
             parts in order to draw the viewers eyes better. The last change was that Wapipely went from a 
             site with multiple users to a site with a single user due to the lack of a server others could upload to.
         </p>
-    </article>
+    </div>
     <h3 class = "title-h">Portfolio Wireframe</h3>
-    <article class="format-g">
+    <div class="format-g">
         <div class="image-c">
             <img src="Pitchboard3.png" alt="Portfolio Wireframe">
         </div>
-    </article>
-    <article class ="description-f">
+    </div>
+    <div class ="description-f">
         <p class ="contact-e">
             The first page of the site would be of the user's portfolio pieces that they 
             have uploaded to the site. At the top of the page the site will have the title
@@ -71,14 +71,14 @@
              will be a Contact Me area, where the users will be able to see my email addresses or 
              any other information that they can use to contact me directly. 
         </p>
-    </article>
+    </div>
     <h4 class = "title-h">Resume Wireframe</h4>
-    <article class="format-g">
+    <div class="format-g">
         <div class="image-e">
             <img src="Pitchboard4.png" alt="Resume Wireframe">
         </div>
-    </article>
-    <article class ="description-f">
+    </div>
+    <div class ="description-f">
         <p class ="contact-e">
             The second page of the site will be for the users resume and skills. At the top of 
             the page there is a link back to the Portfolio page, as well as the title of the page 
@@ -88,7 +88,7 @@
             have mastered. The user will then be able to see a more in-depth description of what the client did at 
             each of their previous companies. Lastly, there is the Contact Me area at the bottom of the page.
         </p>
-    </article>
+    </div>
 </section>
 </body>
 </html>
